--- a/mainDefence/main.tex
+++ b/mainDefence/main.tex
@@ -13,8 +13,11 @@
 \usepackage{titlesec}
 \usepackage{indentfirst}
 \usepackage{graphicx}
+\usepackage{longtable}
+\usepackage[usenames,dvipsnames]{color} % названия цветов
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
+
 \renewcommand{\labelitemi}{–}
 \renewcommand{\labelenumii}{\theenumii}
 \renewcommand{\theenumii}{\theenumi.\arabic{enumii}.}
@@ -37,6 +40,7 @@
 \hyphenpenalty=10000
 \clubpenalty=10000
 \widowpenalty=10000
+\setcounter{page}{8}
 
 % JavaScript
 \lstdefinelanguage{JavaScript}{
@@ -446,28 +450,39 @@ D3.js (название D3 расшифровывается как data driven d
 Целью испытаний является проверка корректности работы тех функциональных частей продукта, которые полностью реализованы в процессе  работы.\par
 
 \subsubsection{Требования к программе}
-\begin{table}[H]
-\caption{Требования к программе}
-\centering
-  \begin{tabular}{|c|p{0.3\textwidth}|p{0.3\textwidth}|}
+Большинство требований предъявленных к системе являются качественными, а не количественными, вследствие чего их проверка не требует особых усилий. Перечислим требования в таблице \hyperref[table3]{3}.\par
+\begin{longtable}[H]{|c|p{0.3\textwidth}|p{0.3\textwidth}|p{0.3\textwidth}|}
+  \caption{Требования к программе}
+  \label{table3}\\
   \hline
   №  & Требование & Способ оценки & Примечание \\\hline
-  1  & Проверка корректности преобразования аналитического источника данных в JSON-объект & Запуск системы в режиме отладки в месте преобразования аналитического источника данных в JSON-объект \\\hline
-  2  & Проверка корректности заполнения формы Редактора шаблона (проверка на обязательность заполнения всех полей) & Запустить Редактор шаблона с интерфейса Администратор отчетов и проверить все поля на обязательное заполнение \\\hline
-  3  & Проверка корректности создания объекта визуализации в интерфейса Администратор отчетов & В интерфейса администратор отчетов создать документ, выбрать заполненный шаблон и соответствующий визуализации формат отчета\\\hline
-  4  & Проверка корректности исполнения фрагмента кода, отвечающего за сбор пользовательских параметров & Запуск системы в режиме отладки в месте сбора пользовательских параметров \\\hline
-  \end{tabular}
-\end{table}\par
-\begin{table}[H]
-\caption{Требования к программе}
-\centering
-  \begin{tabular}{|c|p{0.3\textwidth}|p{0.3\textwidth}|}
-  \hline
+  \endfirsthead
+  1  & Проверка корректности преобразования аналитического источника данных в JSON-объект & Запуск системы в режиме отладки в месте преобразования аналитического источника данных в JSON-объект & Под режимом отладки понимается постановка точки останова в нужном месте и запуск выполнения системы в пошаговом режиме, начиная с установленной точки останова\\\hline
+  2  & Проверка корректности создания объекта визуализации в интерфейсе Администратор отчетов & В интерфейса администратор отчетов создать документ, выбрать заполненный шаблон и соответствующий визуализации формат отчета & \\\hline
+  \pagebreak\hline
+  3  & Проверка корректности заполнения формы Редактора шаблона (проверка на обязательность заполнения всех полей) & Запустить Редактор шаблона с интерфейса Администратор отчетов и проверить все поля на обязательное заполнение & \\\hline
+  4  & Проверка корректности исполнения фрагмента кода, отвечающего за сбор пользовательских параметров & Запуск системы в режиме отладки в месте сбора пользовательских параметров & \\\hline
+  5  & Проверка корректности объединения двух JSON-объектов (собранные пользовательские параметры и аналитичский источник данных) & Запуск системы в режиме отладки в месте объединения двух JSON-объектов & \\\hline
+  6  & Проверка корректнного отображения визуализации в соответствии с заполненным шаблоном, пользовательскими параметрами и аналитическим источников & Выполнение созданной и заполненной визуализации на интерфейса Отчеты & Имеется в виду выполнение в качестве пользователя, а не системного программиста, то есть нажатие кнопки Выполнить на интерфейса Отчеты\\\hline
+\end{longtable}\par
+
+\newpage
+\subsubsection{Методика испытаний}
+\begin{longtable}[H]{|c|p{0.45\textwidth}|p{0.45\textwidth}|}
+  \caption{Требования к программе}
+  \label{table3} \\\hline
   №  & Требование & Способ оценки \\\hline
-  5  & Проверка корректности объединения двух JSON-объектов (собранные пользовательские параметры и аналитичский источник данных) & Запуск системы в режиме отладки в месте объединения двух JSON-объектов \\\hline
-  6  & Проверка корректнного отображения визуализации в соответствии с заполненным шаблоном, пользовательскими параметрами и аналитическим источников & Выполнение созданной и заполненной визуализации на интерфейса Отчеты \\\hline
-  \end{tabular}
-\end{table}\par
+  \multicolumn{3}{|c|}{Проверка корректности работы подсистемы на web-интерфейсе} \\\hline
+  1  & Вводимые данные: создание объекта визуализации на интерфейсе Администратор отчетов & Корректное создание объекта без ошибок \\\hline
+  2  & Вводимые данные: создание аналитического источника на интерфейсе Аналитические источники данных & Корректное создание объекта без ошибок \\\hline
+  3  & Вводимые данные: добавление созданного аналитического источника во вкладку Источники данных в детализации интерфейса Аналитические источники данных & Корректное добавление объекта на интерфейс \\\hline
+  4  & Вводимые данные: создание аналитического источника во вкладке Источники данных в детализации интерфейса Аналитические источники данных & Корректное создание и добавление объекта на интерфейс \\\hline
+  \multicolumn{3}{|c|}{Проверка корректности работы подсистемы на стороне сервера} \\\hline
+  5  & Вводимые данные: проверка корректности преобразования аналитического источника данных в JSON-объект & JSON-объект с идентичными исходному аналитическому источнику полями \\\hline
+  6  & Вводимые данные: проверка корректности исполнения фрагмента кода, отвечающего за сбор пользовательских параметров & Набор java-объектов со значениями соответствующими выбираемым пользовательским параметрам \\\hline
+  7  & Вводимые данные: проверка корректности объединения двух JSON-объектов (собранные пользовательские параметры и аналитичский источник данных) & JSON-объект с идентичными исходному аналитическому источнику и пользовательским параметрам полями \\\hline
+
+\end{longtable}\par
 
 \section{Эксплуатационная документация}
 
@@ -563,6 +578,236 @@ D3.js (название D3 расшифровывается как data driven d
 \caption{Интерфейс Отчеты для пользователя без прав администратора}
 \label{ris7}
 \end{figure}\par
+
+\section{Акт испытаний}
+
+\section{Экономическая часть}
+
+\subsection{Обзор рынка программных продуктов}
+Разрабатываемая подсистема визуализации аналитического отчета должна обеспечивать следующую функциональность:\par
+\begin{itemize}
+  \item возможность преобразовывать аналитический источник данных в удобный для передачи и чтения компонентом визуализации формат;
+  \item возможность запрашивать у пользователя параметры визуализации (наименование визуализации, названия осей, тип визуализации);
+  \item возможность объединения собранных данных в удобный для передачи и чтения компонентом визуализации формат;
+  \item возможность построения объекта визуализации, который должен содержать:
+    \begin{itemize}
+    	\item наименование визуализации;
+        \item легенду, указывающую описание к маркерам данных;
+    	\item оси и подписи к ним, если выбрана столбчатая диаграмма или график;
+        \item метки осей - категории, которые задают положение конкретных значений в ряде данных;
+    \end{itemize}
+  \item возможность интеграции объекта визуализации в программный комплекс «Web-Исполнение бюджета».
+\end{itemize}\par
+Представляемая подсистема создана для узкоспециализированной задачи и использования только в рамках программного продукта «Web-Исполнение бюджета».\par
+При изучении рынка специализированного ПО было выявлено, что аналогичные «Web-Исполнению бюджета» системы так же используют подобный функционал. В большинстве этих систем используются комерческие приложения крупных компаний, таких, как Microsoft, Oracle, cluvio и других.\par
+Oracle Data Visualization Cloud Service, Microsoft Excel Online и cluvio - это платные коммерческие приложения, которые требуют не разовую оплату продукта, а распространяются по системе подписки.
+
+\subsection{Расчет себестоимости подсистемы}
+Расчет себестоимости подсистемы определяется суммированием расходов по следующим пунктам:
+\begin{itemize}
+\item основная заработная плата;
+\item размер социальных отчислений;
+\item накладные расходы;
+\item материальные затраты;
+\item затраты на машинное время;
+\item прочие затраты.
+\end{itemize}
+Далее производится расчет затрат по каждому пункту.\par
+
+\subsubsection{Материальные затраты}
+Материальные затраты – вид затрат, образующих себестоимость продукции, и представляющий расходы, осуществленные на приобретение необходимых для производства товаров (выполнения работ, оказания услуг) расходуемых материальных ресурсов.\par
+В рамках данной разработки материальные затраты представлены расходами на бумагу, оплата доступа в Интернет и т.п.\par
+Расходы на бумагу и прочее можно считать незначительными и пренебречь ими. Доступ в интернет предоставляется по тарифу 550 рублей в месяц. Разработка велась 3 месяца; таким образом, материальные затраты составили 550$\times$3=1650 (руб.).
+
+\subsubsection{Основная заработная плата}
+Размер основной заработной платы (ОЗП) определяется окладом инженера-программиста, количеством разработчиков и сроками разработки:\par
+\begin{equation}
+\label{form1}
+	\text{ОЗП} = \text{СЗП}\times T
+\end{equation}
+где\par
+СЗП – стандартная заработная плата (16500 руб.)\par
+T – число месяцев разработки (3 месяцев).\par
+\begin{equation}
+\label{form2}
+	\text{ОЗП} = 16500\times 3
+\end{equation}\par
+Размер  ОЗП = 49500 руб.
+
+\subsubsection{Социальные отчисления}
+Отчисления на социальные нужды производятся согласно Федеральному закону №212-ФЗ «О страховых взносах в Пенсионный фонд Российской Федерации, Фонд социального страхования Российской Федерации, Федеральный фонд обязательного медицинского страхования (редакция от 02.04.2014)», который устанавливает следующие тарифы страховых взносов:
+\begin{itemize}
+  \item Пенсионный фонд Российской Федерации - 22\%;
+  \item Фонд социального страхования Российской Федерации - 2,9\%;
+  \item Федеральный фонд обязательного медицинского страхования - 5,1\%;
+\end{itemize}\par
+Суммарный процент социальных отчислений $C_o$ составляет $22\% + 2.9\% + 5.1\%$. Соответственно, размер социальных отчислений предриятия на заработную плату равенн:
+\begin{equation}
+\label{form3}
+	\text{О}_\text{соц} = \text{ЗП}\times C_o = \text{ЗП}\times 30\%
+\end{equation}\par
+Получаем, что $\text{О}_\text{соц}$ = 14850 (руб.)\par
+Сумма затрат предприятия на заявленную заработную плату работников составляет:
+\begin{equation}
+\label{form4}
+	\text{Р}_\text{ЗП}=\text{ЗП}\times(1+C_o)
+\end{equation}
+
+\begin{equation}
+\label{form5}
+	\text{Р}_\text{ЗП}=49500\times(1+0.3)
+\end{equation}\par
+
+\subsubsection{Затраты на машинное время}
+Расходы на машинное время с учетом наличия 246 дней в году определяются по формуле:\par
+\begin{equation}
+\label{form6}
+	\text{Мвр}=\text{Счмв}\times \text{ВР}_\text{м}
+\end{equation}
+где $\text{М}_\text{вр}$ – расходы на машинное время, руб.;\par
+Счмв – стоимость одного часа машинного времени, руб./час;\par
+ВРм – время использования ЭВМ для разработки программного продукта, час.\par
+Стоимость одного часа машинного времени можно рассчитать по формуле:\par
+\begin{equation}
+\label{form7}
+	\text{Счмв}=\frac{\text{Цк}}{\text{Ссл}\times 246\times \text{Вэд}}+\text{РЭ}
+\end{equation}
+где $\text{Ц}_\text{ро}$ – цена рабочего окружения (покупная цена программного и аппаратного обеспечения), руб;\par
+Ссл – срок службы компьютера, лет;\par
+Вэд – время эксплуатации ЭВМ в день, час;\par
+Рэ – эксплуатационные расходы, руб./час.\par
+Покупная цена программного и аппаратного обеспечения составляет сумму цены компьютера, цены операционной системы и цены среды разработки:
+\begin{equation}
+	\text{Ц}_\text{ро} = \text{Ц}_\text{к}+\text{Ц}_\text{OS}+\text{Ц}_\text{ср}
+\end{equation}
+где $\text{Ц}_\text{ро}$ – цена рабочего окружения;\par
+$\text{Ц}_\text{к}$ – цена компьютера с учетом всех комплектующих (35000 руб.);\par
+$\text{Ц}_\text{OS}$ – цена операционной системы (9000 руб.);\par
+$\text{Ц}_\text{ср}$ – цена среды разработки (840 руб. в месяц $\times$ 3 месяца = 2520 руб.).\par
+Эксплуатационные расходы Pэ вычисляются по формуле:\par
+\begin{equation}
+	\text{Ц}_\text{ро} = 35000+9000+2520=46520
+\end{equation}
+\begin{equation}
+\label{form8}
+	\text{Рэ}=\text{Сэ}\times \text{Р}=4\times 0.3\approx 1.2 \text{ руб./час}
+\end{equation}
+где Сэ – стоимость 1кВт$\times$ч электроэнергии, руб./кВт$\times$ч;\par
+Р – суммарная потребляемая мощность вычислительной системы, кВт.\par
+Рассчитаем стоимость одного часа машинного времени:\par
+\begin{equation}
+\label{form9}
+	\text{Счмв}=\frac{46520}{8\times 246\times 3}+1.2 = 9.07\text{ руб./час}
+\end{equation}\par
+Возьмем среднее значение рабочих дней в месяц (21 день), время работы вычислительной машины равно 21$\times$3 = 63 (дня), то есть в часах время использования ЭВМ составит:\par
+\begin{equation}
+\label{form10}
+	\text{ВРм}=63\times 8=288\text{ (ч.)}
+\end{equation}
+Следовательно, можно найти расходы на машинное время:
+\begin{equation}
+\label{form11}
+	\text{Мвр}=\text{Счмв}\times\text{ВРм}=9.07\times 288 = 2612.16\text{ (руб.)}
+\end{equation}
+\subsubsection{Накладные расходы}
+В накладных расходах учитываются расходы на управление, коммунальные услуги, аренду помещения. Величина накладных расходов определяется в процентах от основной заработной платы, составляет 30\%, т.е. 14850 рублей:
+\begin{equation}
+\label{form12}
+	\text{Р}_\text{Н}=49500\times 0.3=14850\text{ (руб.)}
+\end{equation}
+
+\subsubsection{Прочие затраты}
+Прочие затраты могут включать:
+\begin{itemize}
+\item командировочные расходы разработчика, связанные с процессом разработки (учитываются по нормативу);
+\item коммерческие расходы, связанные с реализацией программного продукта (в размере 2 – 3\% от производственной себестоимости – суммы материальных затрат, заработной платы с отчислениями и стоимости машинного времени);
+\item расходы на рекламу.
+\end{itemize}\par
+При расчете суммы общих затрат будем исходить из того, что командировочные расходы и расходы на рекламу отсутствуют, а величина коммерческих расходов составляет 2,5\% от производственной себестоимости программного продукта:
+\begin{equation}
+\label{form13}
+	\text{ПР}=(\text{МЗ}+\text{ОЗП}+\text{О}_\text{есн}+\text{Мвр}+\text{Р}_\text{Н})\times 0.25
+\end{equation}
+$$\text{ПР}=(1650+49500+14850+2612.16+14850)\times 0.025=2086.55\text{ (руб.)}$$
+
+\subsubsection{Определение себестоимости разрабатываемой подсистемы}
+Себестоимость разработки программного средства представляет собой сумму затрат по экономическим элементам, приведенным в таблице 1.\par
+\begin{table}[H]
+\caption{Экономические элементы для расчета $\text{П}_\text{себ}$}
+\centering
+  \begin{tabular}{|c|c|}
+  \hline
+  Затраты & Сумма, руб. \\\hline
+  Материальные затраты & 1650 \\\hline
+  Основная заработная плата & 49500 \\\hline
+  Социальные отчисления & 14850 \\\hline
+  Затраты на машинное время & 2612.16 \\\hline
+  Накладные расходы & 14850 \\\hline
+  Прочие затраты & 2086.55 \\\hline
+  Итог: & 85548.71 \\
+  \hline
+  \end{tabular}
+\end{table}\par
+Таким образом, стоимость разработки составила 85548.71 (руб.).\par
+
+\subsection{Оценка эффекта от продажи подсистемы}
+
+\subsubsection{Расчет прибыли от продажи одной копии подсистемы}
+Разрабатываемая подсистема попадает в следующую версию программного комплекса «Web-Исполнения бюджета». На данный момент заказ на неё оформлен 8 заказчиками:\par
+\begin{table}[H]
+\caption{Заказчики, согласившиеся включить в следющее обновление разработанную подсистему}
+\centering
+  \begin{tabular}{|c|c|}
+  \hline
+  № & Наименование \\\hline
+  1 & Долгопрудный (ФУ) Московская обл. \\\hline
+  2 & Ленинский район (ФУ) Московская обл. \\\hline
+  3 & Можайский район (ФКУ) Московская обл. \\\hline
+  4 & Орехово-Зуево (ФУ ГО) Московская обл. \\\hline
+  5 & Подольск (ФУ) Московская обл. \\\hline
+  6 & Пушкинский р-н (КФНП) Московская обл. \\\hline
+  7 & Фрязино (ФУ) Московская обл. \\\hline
+  8 & Электросталь (ФУ) Московская обл. \\\hline
+  \end{tabular}
+\end{table}\par
+
+Расчет прибыли от продажи одной копии подсистемы осуществляется по следующей формуле:
+\begin{equation}
+\label{form13}
+	\text{П}_\text{ед}=\text{Ц}-\text{НДС}-\frac{\text{З}_\text{р}}{N}
+\end{equation}
+где $\text{П}_\text{ед}$ - прибыли от продажи одной копии;\par
+$\text{Ц}$ - цена одной копии;\par
+$\text{НДС}$ - налог на добавленную стоимость;\par
+$\text{З}_\text{р}$ - затраты на реализацию;\par
+N - количество заказчиков.\par
+Цену одной копии возьмем примерно равно 20\% от себестоимости, что равно 17000 руб.
+Расчитаем НДС:
+\begin{equation}
+\label{form14}
+	\text{НДС}=\frac{\text{Ц}\times \text{\%НДС}}{100\%+18\%}=\frac{17000\times 18\%}{100\%+18\%}=2609,9 \text{ (руб.)}
+\end{equation}\par
+Расчитаем затраты на реализацию, которые составляют 10\% от себестоимости разработки:
+\begin{equation}
+\label{form15}
+	85548,71\times 0,1 = 8554.87 \text{ (руб.)}
+\end{equation}\par
+Таким образом прибыль от продажи одной копии будет составлять:
+\begin{equation}
+\label{form16}
+	\text{П}_\text{ед}=17000-2609,9-\frac{85548.71+8554.87}{8}=2627.15\text{ (руб.)}
+\end{equation}
+Затраты на разработку и реализацию составляют 85548.71 и 8554.87 (руб.) соответственно. Доход от продажи одной копии подсистемы составляет:\par
+\begin{equation}
+\label{form17}
+	\text{Ц}-\text{\%НДС} = 17000-2609,9 = 14390.1 \text{ (руб.)}
+\end{equation}\par
+Рассчитаем количество копий, которые необходимо продать для окупаемости затрат:\par
+\begin{equation}
+\label{form18}
+	\frac{85548.71+8554.87}{14390.1}=7 \text{ (копий)}
+\end{equation}
+После 7 проданных заказчикам копий, дальнейшие продажи будут приносить прибыль.
 
 \end{document} % Конец текста.
 
