--- a/economic/economic.tex
+++ b/economic/economic.tex
@@ -22,18 +22,11 @@
 \linespread{1.3}
 \renewcommand{\rmdefault}{ftm}
 \usepackage[left=20mm, top=15mm, right=15mm, bottom=15mm, nohead, footskip=10mm]{geometry}
+\setlength{\parskip}{0.5cm}
 \usepackage{ragged2e}
 \justifying
 \pretolerance10000
 
-% JavaScript
-\lstdefinelanguage{JavaScript}{
-  morekeywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
-  morecomment=[s]{/*}{*/},
-  morecomment=[l]//,
-  morestring=[b]",
-  morestring=[b]'
-}
 
 \begin{document}
 
