--- a/mainDefence/main.tex
+++ b/mainDefence/main.tex
@@ -30,6 +30,16 @@
 
 \setlist[enumerate,itemize]{leftmargin=0pt,itemindent=2.7em}
 
+\usepackage[tableposition=top]{caption}
+\usepackage{subcaption}
+\DeclareCaptionLabelFormat{gostfigure}{Рисунок #2}
+\DeclareCaptionLabelFormat{gosttable}{Таблица #2}
+\DeclareCaptionLabelSeparator{gost}{~---~}
+\captionsetup{labelsep=gost}
+\captionsetup[figure]{labelformat=gostfigure}
+\captionsetup[table]{labelformat=gosttable}
+\renewcommand{\thesubfigure}{\asbuk{subfigure}}
+
 \linespread{1.3}
 \renewcommand{\rmdefault}{ftm}
 \usepackage[left=20mm, top=15mm, right=15mm, bottom=15mm, nohead, footskip=10mm]{geometry}
@@ -41,6 +51,13 @@
 \clubpenalty=10000
 \widowpenalty=10000
 \setcounter{page}{8}
+
+\lstset{
+	basicstyle=\ttfamily,
+    columns=fullflexible,
+    frame=single,
+    breaklines=true,
+}
 
 % JavaScript
 \lstdefinelanguage{JavaScript}{
@@ -104,7 +121,31 @@
 \end{itemize}\par
 
 \subsection{Обзор аналогов}
-При изучении рынка программных продуктов был выявлен ряд программных продуктов, которые выполняют схожие с моей подсистемой функции.
+Представляемая подсистема создана для узкоспециализированной задачи и использования только в рамках программного продукта «Web-Исполнение бюджета».\par
+При изучении рынка специализированного ПО было выявлено, что аналогичные «Web-Исполнению бюджета» системы так же используют подобный функционал. В большинстве этих систем используются комерческие приложения крупных компаний, таких, как Microsoft, Oracle, cluvio и других.\par
+Oracle Data Visualization Cloud Service, Microsoft Excel Online и cluvio - это платные коммерческие приложения, которые требуют не разовую оплату продукта, а распространяются по системе подписки.
+\begin{longtable}[H]{|p{0.2\textwidth}|p{0.4\textwidth}|p{0.4\textwidth}|}
+  \caption{Преимущества и недостатки аналогов}
+  \label{table3} \\\hline
+  Технология & Преимущества & Недостатки \\\hline
+  Oracle Data Visualization Cloud Service &
+  	— Облачный сервис
+  &
+  	— поддерживает только базу Oracle
+  \\\hline
+  Microsoft Excel Online &
+  	— Облачный сервис
+  &
+  	— работает только с форматом .xls и .xlsx \newline
+    — только стандартные пресеты системы Microsoft Excel
+  \\\hline
+  cluvio &
+  	— Облачный сервис \newline
+    — Большое количество пресетов для графиков и диаграмм
+  &
+  	— платный сервис, распространяемый по системе подписки
+  \\\hline
+\end{longtable}\par
 
 \section{Программная документация}
 
@@ -266,7 +307,7 @@
 \end{itemize}
 
 \paragraph{Требования к программному обеспечению}
-Актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой версии ECMAScript 6 и старше). JavaScript-библиотека jQuery версии 3.1 и старше. JavaScript-библиотека D3.js версии 4.8.0 и старше. При использовании ЭП - криптографическое ПО.
+Актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой версии JavaScript ECMAScript 6 и старше). JavaScript-библиотека jQuery версии 3.1 и старше. JavaScript-библиотека D3.js версии 4.8.0 и старше. При использовании ЭП - криптографическое ПО.
 
 \paragraph{Требования к документации на дипломный проект}
 В состав документации на дипломный проект входят следующие разделы и документы:\par
@@ -323,12 +364,12 @@
 Диаграммы вариантов использования подсистемы построения аналитических отчетов до внедрения подсистемы визуализации аналитических отчетов и после ее внедрения представлены на рисунках (\hyperref[ris1]{Рисунок 1} и \hyperref[ris2]{Рисунок 2}).
 \begin{figure}[H]
 \center{\includegraphics[width=17cm]{./imgs/1.png}}
-\caption{Диаграмма вариантов использования до внедрения разрабатываемой подсистемы.}
+\caption{Диаграмма вариантов использования до внедрения разрабатываемой подсистемы}
 \label{ris1}
 \end{figure}\par
 \begin{figure}[H]
 \center{\includegraphics[width=17cm]{./imgs/2.png}}
-\caption{Диаграмма вариантов использования после внедрения разрабатываемой подсистемы.}
+\caption{Диаграмма вариантов использования после внедрения разрабатываемой подсистемы}
 \label{ris2}
 \end{figure}\par
 
@@ -337,30 +378,29 @@
 \begin{itemize}
 \item При написании компонента визуализации предполагается использовать JavaScript, а JSON - это текстовый формат основанный на JavaScript;
 \item Формат JSON удобнее обрабатывать языком JavaScript, в отличие от других форматов передачи данных.
-
-\begin{table}[H]
-\caption{Сравнениек разбора JSON, XML и YAML объектов на языке JavaScript.}
-\centering
-  \begin{tabular}{|c|c|c|c|}
-  \hline
-  Формат & Содержание & Разбор \\\hline
-  JSON  &  
-  %картинка с JSON
-  & 
-  %картинка с кодом парсинга JSON
-  \\\hline
-  XML   &  
-  %картинка с XML
-  & 
-  %картинка с кодом парсинга XML
-  \\\hline
-  YAML  & 
-  %картинка с YAML
-  & 
-  %картинка с кодом парсинга YAML
-  \\\hline
-  \end{tabular}
-\end{table}\par
+% \begin{table}[H]
+% \caption{Сравнениек разбора JSON, XML и YAML объектов на языке JavaScript.}
+% \centering
+%   \begin{tabular}{|c|c|c|c|}
+%   \hline
+%   Формат & Содержание & Разбор \\\hline
+%   JSON  &  
+%   %картинка с JSON
+%   & 
+%   %картинка с кодом парсинга JSON
+%   \\\hline
+%   XML   &  
+%   %картинка с XML
+%   & 
+%   %картинка с кодом парсинга XML
+%   \\\hline
+%   YAML  & 
+%   %картинка с YAML
+%   & 
+%   %картинка с кодом парсинга YAML
+%   \\\hline
+%   \end{tabular}
+% \end{table}\par
 \end{itemize}
 
 \paragraph{Описание и обоснование выбора состава технических и программных средств}
@@ -384,7 +424,7 @@
 Когда пользователь запускает процесс построения визуализации, в действие приводятся написанные разработчиком события, формирующие аналитические данные, выбираются пользовательские параметры объекта аналитичекого отчета и параметры из шаблона визуализации. После того, как аналитические данные полностью сформировались, они формируются в JSON-объект вместе с пользовательскими параметрами объекта аналитичекого отчета и параметрами из шаблона визуализации и передаются компоненте построения визуализации.
 
 \paragraph{Программное обеспечение, необходимое для функционирования программы}
-Для функционирования подсистемы необходима актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой версии JavaScript 1.7 и старше). При использовании ЭП – криптографическое ПО.
+Для функционирования подсистемы необходима актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой версии JavaScript ECMAScript 6 и старше). При использовании ЭП – криптографическое ПО.
 
 \paragraph{Используемые при разработке языки программирования и инструментальные средства}
 Java – объектно–ориентированный структурный императивный язык программирования со строгой полиморфной статической явной системой типов. Программы на Java транслируются в байт-код, что делает их практически не зависимыми от операционной системы.\par
@@ -410,15 +450,15 @@ D3.js (название D3 расшифровывается как data driven d
 \end{itemize}\par
 
 \subsubsection{Структура программы (модули, классы)}
-Структура разработанной подсистемы визуализации аналитических источников представленна на рисунках \hyperref[umlClassDiagram:ris1]{Рисунок 1} и \hyperref[umlClassDiagram:ris2]{Рисунок 2}.
+Структура разработанной подсистемы визуализации аналитических источников представленна на рисунках \hyperref[umlClassDiagram:ris1]{Рисунок 3} и \hyperref[umlClassDiagram:ris2]{Рисунок 4}.
 \begin{figure}[H]
 \center{\includegraphics[width=17cm]{./imgs/FullDiagramDesigner.png}}
-\caption{UML-диаграмма классов разрабатываемой подсистемы.}
+\caption{UML-диаграмма классов разрабатываемой подсистемы}
 \label{umlClassDiagram:ris1}
 \end{figure}\par
 \begin{figure}[H]
 \center{\includegraphics[width=8cm]{./imgs/FullDiagramDesigner_2.png}}
-\caption{UML-диаграмма классов разрабатываемой подсистемы.}
+\caption{UML-диаграмма классов разрабатываемой подсистемы}
 \label{umlClassDiagram:ris2}
 \end{figure}\par
 В классе ReportForm происходит вызов скриптового файла executeReport.st, который, в свою очередь, выполняет две основные функции:
@@ -469,7 +509,7 @@ D3.js (название D3 расшифровывается как data driven d
 \newpage
 \subsubsection{Методика испытаний}
 \begin{longtable}[H]{|c|p{0.45\textwidth}|p{0.45\textwidth}|}
-  \caption{Требования к программе}
+  \caption{Методика испытаний}
   \label{table3} \\\hline
   №  & Требование & Способ оценки \\\hline
   \multicolumn{3}{|c|}{Проверка корректности работы подсистемы на web-интерфейсе} \\\hline
@@ -504,7 +544,7 @@ D3.js (название D3 расшифровывается как data driven d
   \item время прохождения пакета (ping) от клиента до сервера не больше 100 мс;
   \item скорость передачи данных: от 256 Кбит/с при однопользовательской работе, от 1024 Кбит/с для 2-4 пользователей.
 \end{itemize}\par
-Для функционирования модуля необходима актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой версии ECMAScript 6 и старше). JavaScript-библиотека jQuery версии 3.1 и старше. JavaScript-библиотека D3.js версии 4.8.0 и старше. При использовании ЭП - криптографическое ПО.
+Для функционирования модуля необходима актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой версии JavaScript ECMAScript 6 и старше). JavaScript-библиотека jQuery версии 3.1 и старше. JavaScript-библиотека D3.js версии 4.8.0 и старше. При использовании ЭП - криптографическое ПО.
 
 \subsubsection{Управление подсистемой}
 Подсистема визуализации аналитических отчетов интегрирована в систему "Web-Исполнение бюджета", поэтому для использования подсистемы необходим доступ к системе с правами администратора. Работа системного программиста по управлению подсистемой происходит следующим образом:
@@ -512,40 +552,40 @@ D3.js (название D3 расшифровывается как data driven d
 	\item Для начала необходимо создать Аналитический источник данных.\par
 	Создание аналитического источника начинается с указания наименования аналитического источника (\hyperref[ris3_1]{Рисунок 5}). Далее следует сохранить документ нажатием кнопки "Принять изменения" в виде галочки на верхней панели кнопок. Далее выбрается Идентификатор данных - это модель данных, из которой будет происходить выборка данных. Добавление происходит в детализации интерфейса Аналитические источники данных во вкладке Секции (\hyperref[ris3_2]{Рисунок 6}). Затем в новый аналитический источник добавляются колонки из модели данных, которые будут использоваться при формировании данных для отчета, для этого следует перейти на вкладку Колонки в детализации интерфейса Аналитические источники данных (\hyperref[ris3_3]{Рисунок 7}). После добавления колонок требуется написать события, которые будут отвечать за содержание данных во время подготовки параметров (событие На подготовку параметров), после закачки данных (событие После закачки) после формирования данных, это делается в самом интерфейса, в его заголовочной части (\hyperref[ris3_1]{Рисунок 5}).
 \begin{figure}[H]
-\center{\includegraphics[width=17cm]{./imgs/3_1.png}.}
-\caption{Интерфейс создания Аналитического источника данных.}
+\center{\includegraphics[width=17cm]{./imgs/3_1.png}}
+\caption{Интерфейс создания Аналитического источника данных}
 \label{ris3_1}
 \end{figure}\par
 \begin{figure}[H]
-\center{\includegraphics[width=17cm]{./imgs/3_2.png}.}
-\caption{Вкладка Секции детализации Аналитического источника данных.}
+\center{\includegraphics[width=17cm]{./imgs/3_2.png}}
+\caption{Вкладка Секции детализации Аналитического источника данных}
 \label{ris3_2}
 \end{figure}\par
 \begin{figure}[H]
-\center{\includegraphics[width=17cm]{./imgs/3_3.png}.}
-\caption{Вкладка Колонки детализации Аналитического источника данных.}
+\center{\includegraphics[width=17cm]{./imgs/3_3.png}}
+\caption{Вкладка Колонки детализации Аналитического источника данных}
 \label{ris3_3}
 \end{figure}\par
 	\item Далее создается шаблон визуализации в формате .template. Это делается на интерфейсе Администратор отчетов (\hyperref[ris4_1]{Рисунок 8}). Созданный шаблон можно редактировать на этом же интерфейсе в Редакторе шаблонов (вторая кнопка слева на верхней панель кнопок), где можно выбрать наименование диаграммы, наличие на диаграмме легенды, вид диаграммы и наименование осей (\hyperref[ris5]{Рисунок 9}).
 \begin{figure}[H]
-\center{\includegraphics[width=17cm]{./imgs/5.png}.}
-\caption{Редактор шаблонов на интерфейсах Администратор отчетов и Отчеты.}
+\center{\includegraphics[width=17cm]{./imgs/5.png}}
+\caption{Редактор шаблонов на интерфейсах Администратор отчетов и Отчеты}
 \label{ris5}
 \end{figure}\par
 \begin{figure}[H]
-\center{\includegraphics[width=17cm]{./imgs/4_1.png}.}
-\caption{Интерфейс создания Аналитического отчета с кнопкой «Новый шаблон».}
+\center{\includegraphics[width=17cm]{./imgs/4_1.png}}
+\caption{Интерфейс создания Аналитического отчета с кнопкой «Новый шаблон»}
 \label{ris4_1}
 \end{figure}\par
     \item Следующим этапом будет создание нового объекта визуализации на интерфейсе Администратор отчетов. Здесь указывается Наименование объекта, выбираются шаблон, созданный ранее и формат отчета (d3\_diagram для объекта визуализации). Далее, в детализации интерфейса Администратор отчетов (\hyperref[ris4_2]{Рисунок 10}), указывается источник данных, созданный ранее, на основании которого будет строится визуализация и указываются нужные параметры визуализации.
 \begin{figure}[H]
-\center{\includegraphics[width=12cm]{./imgs/4_2.png}.}
-\caption{Детализация интерфейса создания Аналитического отчета.}
+\center{\includegraphics[width=12cm]{./imgs/4_2.png}}
+\caption{Детализация интерфейса создания Аналитического отчета}
 \label{ris4_2}
 \end{figure}\par
     \item После создания объекта визуализации его можно выполнить на интерфейсе Отчеты нажав кнопку Выполнить в верхней панели кнопок (\hyperref[ris6]{Рисунок 11}). Здесь, как и на интерфейсе Администратор отчетов можно править шаблон визуализации с помощью Редактора шаблонов.
 \begin{figure}[H]
-\center{\includegraphics[width=12cm]{./imgs/6.png}.}
+\center{\includegraphics[width=12cm]{./imgs/6.png}}
 \caption{Интерфейс Отчеты}
 \label{ris6}
 \end{figure}\par
@@ -569,18 +609,40 @@ D3.js (название D3 расшифровывается как data driven d
   \item время прохождения пакета (ping) от клиента до сервера не больше 100 мс;
   \item скорость передачи данных: от 256 Кбит/с при однопользовательской работе, от 1024 Кбит/с для 2-4 пользователей.
 \end{itemize}\par
-Для функционирования модуля необходима актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой версии ECMAScript 6 и старше). JavaScript-библиотека jQuery версии 3.1 и старше. JavaScript-библиотека D3.js версии 4.8.0 и старше. При использовании ЭП - криптографическое ПО.
+Для функционирования модуля необходима актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой JavaScript версии ECMAScript 6 и старше). JavaScript-библиотека jQuery версии 3.1 и старше. JavaScript-библиотека D3.js версии 4.8.0 и старше. При использовании ЭП - криптографическое ПО.
 
 \subsubsection{Работа с подсистемой}
 Обычные пользователи, которые не имеют прав администратора в системе, имеют доступ только к интерфейсу Отчеты, в котором у них нет прав реактировать шаблон визуализации. Пользователи без прав администратора могут только Выполнять построение визуализации, нажав на кнопку Выпонить в верхней панели кнопок интерфейса Отчеты (\hyperref[ris7]{Рисунок 12}).
 \begin{figure}[H]
-\center{\includegraphics[width=10cm]{./imgs/7.png}.}
+\center{\includegraphics[width=10cm]{./imgs/7.png}}
 \caption{Интерфейс Отчеты для пользователя без прав администратора}
 \label{ris7}
 \end{figure}\par
 
+\newpage
 \section{Акт испытаний}
 
+\subsection{Объект испытаний}
+Объектом испытаний является подсистема визуализации аналитических отчетов. Данная подсистема предназначена для пользователей программного комплекса «Web-Исполнение Бюджета», чтобы обеспечить им возможность более эффективного анализа данных за счет их визуализации, представления этих данных в графическом представлении, в виде графиков или диаграмм.
+
+\subsection{Цель испытаний}
+Целью испытаний является проверка корректности работы тех функциональных частей продукта, которые полностью реализованы в процессе  работы.\par
+\subsection{Выводы}
+Испытания подсистемы производили
+\begin{itemize}
+\item разработчик Ляпушкин Н. А.
+\item руководитель выпускной квалификационной работы Маврин С. В.
+\end{itemize}\par
+Проведя тестирование по всем пунктам методики испытаний, можно сказать, что подсистема работает верно, и удовлетворяет заданным требованиям. Работу можно считать завершенной с положительным результатом.
+\vfill
+\begin{flushright}
+\begin{tabular}{p{.8\textwidth}}
+  Студент-дипломник \hrulefill Н. А. Ляпушкин \\
+  Руководитель \hrulefill С. В. Маврин
+\end{tabular}
+\end{flushright}
+
+\newpage
 \section{Экономическая часть}
 
 \subsection{Обзор рынка программных продуктов}
@@ -624,7 +686,7 @@ Oracle Data Visualization Cloud Service, Microsoft Excel Online и cluvio - эт
 \begin{equation}
 \label{form1}
 	\text{ОЗП} = \text{СЗП}\times T
-\end{equation}
+\end{equation}\newline
 где\par
 СЗП – стандартная заработная плата (16500 руб.)\par
 T – число месяцев разработки (3 месяцев).\par
@@ -641,7 +703,7 @@ T – число месяцев разработки (3 месяцев).\par
   \item Фонд социального страхования Российской Федерации - 2,9\%;
   \item Федеральный фонд обязательного медицинского страхования - 5,1\%;
 \end{itemize}\par
-Суммарный процент социальных отчислений $C_o$ составляет $22\% + 2.9\% + 5.1\%$. Соответственно, размер социальных отчислений предриятия на заработную плату равенн:
+Суммарный процент социальных отчислений $C_o$ составляет $22\% + 2,9\% + 5,1\%$. Соответственно, размер социальных отчислений предриятия на заработную плату равенн:
 \begin{equation}
 \label{form3}
 	\text{О}_\text{соц} = \text{ЗП}\times C_o = \text{ЗП}\times 30\%
@@ -655,7 +717,7 @@ T – число месяцев разработки (3 месяцев).\par
 
 \begin{equation}
 \label{form5}
-	\text{Р}_\text{ЗП}=49500\times(1+0.3)
+	\text{Р}_\text{ЗП}=49500\times(1+0,3)
 \end{equation}\par
 
 \subsubsection{Затраты на машинное время}
@@ -697,7 +759,7 @@ $\text{Ц}_\text{ср}$ – цена среды разработки (840 руб
 Рассчитаем стоимость одного часа машинного времени:\par
 \begin{equation}
 \label{form9}
-	\text{Счмв}=\frac{46520}{8\times 246\times 3}+1.2 = 9.07\text{ руб./час}
+	\text{Счмв}=\frac{46520}{8\times 246\times 3}+1.2 = 9,07\text{ руб./час}
 \end{equation}\par
 Возьмем среднее значение рабочих дней в месяц (21 день), время работы вычислительной машины равно 21$\times$3 = 63 (дня), то есть в часах время использования ЭВМ составит:\par
 \begin{equation}
@@ -707,13 +769,13 @@ $\text{Ц}_\text{ср}$ – цена среды разработки (840 руб
 Следовательно, можно найти расходы на машинное время:
 \begin{equation}
 \label{form11}
-	\text{Мвр}=\text{Счмв}\times\text{ВРм}=9.07\times 288 = 2612.16\text{ (руб.)}
+	\text{Мвр}=\text{Счмв}\times\text{ВРм}=9,07\times 288 = 2612,16\text{ (руб.)}
 \end{equation}
 \subsubsection{Накладные расходы}
 В накладных расходах учитываются расходы на управление, коммунальные услуги, аренду помещения. Величина накладных расходов определяется в процентах от основной заработной платы, составляет 30\%, т.е. 14850 рублей:
 \begin{equation}
 \label{form12}
-	\text{Р}_\text{Н}=49500\times 0.3=14850\text{ (руб.)}
+	\text{Р}_\text{Н}=49500\times 0,3=14850\text{ (руб.)}
 \end{equation}
 
 \subsubsection{Прочие затраты}
@@ -726,9 +788,9 @@ $\text{Ц}_\text{ср}$ – цена среды разработки (840 руб
 При расчете суммы общих затрат будем исходить из того, что командировочные расходы и расходы на рекламу отсутствуют, а величина коммерческих расходов составляет 2,5\% от производственной себестоимости программного продукта:
 \begin{equation}
 \label{form13}
-	\text{ПР}=(\text{МЗ}+\text{ОЗП}+\text{О}_\text{есн}+\text{Мвр}+\text{Р}_\text{Н})\times 0.25
+	\text{ПР}=(\text{МЗ}+\text{ОЗП}+\text{О}_\text{есн}+\text{Мвр}+\text{Р}_\text{Н})\times 0,025
 \end{equation}
-$$\text{ПР}=(1650+49500+14850+2612.16+14850)\times 0.025=2086.55\text{ (руб.)}$$
+$$\text{ПР}=(1650+49500+14850+2612,16+14850)\times 0,025=2086,55\text{ (руб.)}$$
 
 \subsubsection{Определение себестоимости разрабатываемой подсистемы}
 Себестоимость разработки программного средства представляет собой сумму затрат по экономическим элементам, приведенным в таблице 1.\par
@@ -741,14 +803,14 @@ $$\text{ПР}=(1650+49500+14850+2612.16+14850)\times 0.025=2086.55\text{ (руб
   Материальные затраты & 1650 \\\hline
   Основная заработная плата & 49500 \\\hline
   Социальные отчисления & 14850 \\\hline
-  Затраты на машинное время & 2612.16 \\\hline
+  Затраты на машинное время & 2612,16 \\\hline
   Накладные расходы & 14850 \\\hline
-  Прочие затраты & 2086.55 \\\hline
-  Итог: & 85548.71 \\
+  Прочие затраты & 2086,55 \\\hline
+  Итог: & 85548,71 \\
   \hline
   \end{tabular}
 \end{table}\par
-Таким образом, стоимость разработки составила 85548.71 (руб.).\par
+Таким образом, стоимость разработки составила 85548,71 (руб.).\par
 
 \subsection{Оценка эффекта от продажи подсистемы}
 
@@ -790,27 +852,48 @@ N - количество заказчиков.\par
 Расчитаем затраты на реализацию, которые составляют 10\% от себестоимости разработки:
 \begin{equation}
 \label{form15}
-	85548,71\times 0,1 = 8554.87 \text{ (руб.)}
+	85548,71\times 0,1 = 8554,87 \text{ (руб.)}
 \end{equation}\par
 Таким образом прибыль от продажи одной копии будет составлять:
 \begin{equation}
 \label{form16}
-	\text{П}_\text{ед}=17000-2609,9-\frac{85548.71+8554.87}{8}=2627.15\text{ (руб.)}
+	\text{П}_\text{ед}=17000-2609,9-\frac{85548,71+8554,87}{8}=2627,15\text{ (руб.)}
 \end{equation}
-Затраты на разработку и реализацию составляют 85548.71 и 8554.87 (руб.) соответственно. Доход от продажи одной копии подсистемы составляет:\par
+Затраты на разработку и реализацию составляют 85548,71 и 8554,87 (руб.) соответственно. Доход от продажи одной копии подсистемы составляет:\par
 \begin{equation}
 \label{form17}
-	\text{Ц}-\text{\%НДС} = 17000-2609,9 = 14390.1 \text{ (руб.)}
+	\text{Ц}-\text{\%НДС} = 17000-2609,9 = 14390,1 \text{ (руб.)}
 \end{equation}\par
 Рассчитаем количество копий, которые необходимо продать для окупаемости затрат:\par
 \begin{equation}
 \label{form18}
-	\frac{85548.71+8554.87}{14390.1}=7 \text{ (копий)}
+	\frac{85548,71+8554,87}{14390,1}=7 \text{ (копий)}
 \end{equation}
 После 7 проданных заказчикам копий, дальнейшие продажи будут приносить прибыль.
 
-\end{document} % Конец текста.
+\newpage
+\section*{Заключение}
+\addcontentsline{toc}{section}{Заключение}
+В результате выполнения выпускной квалификационной работы была разработана подсистема визуализации аналитических отчетов. Выполнена поставленная цель по интеграции посистемы в программный комплекс автоматизированной системы «Web-Исполнение Бюджета» и поддержке корректной работы в актуальных версиях браузеров Mozilla Firefox, Yandex Browser, Google Chrome. Были улучшены навыки работы с выбранными технологиями и навыки составления технической документации.
 
+\newpage
+\section*{Список использованных источников}
+\addcontentsline{toc}{section}{Список использованных источников}
+\begin{enumerate}
+\item Общее описание системы ООО НПО Криста [Электронный ресурс]: https://www.krista.ru/files/catalog/ (дата обращения: 12.05.2017)
+\item Nicl Qi Zhu Data Visualization with D3.js.— PacktPub, 2013. - 332 c.
+\item Ved Antani Mastering JavaScript.— President, MindView, Inc., 2016. - 250 с.
+\item Bruce Eckel Thinking in Java, 4th ed.— President, MindView, Inc., 2006. - 1150 с.
+\item Scott Murray Interactive Data Visualization for the Web.— O'Reilly Media, 2013. - 272 с.
+\end{enumerate}
+
+\newpage
+\section*{Приложение А.Исходный код}
+\addcontentsline{toc}{section}{Приложение А.Исходный код}
+\lstinputlisting[language=Java]{ReportForm.java}
+\lstinputlisting[language=Java]{ctrlD3Report.js}
+
+\end{document} % Конец текста.
 
 
 
